--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = {version = "^20.8b1", allow-prereleases = true}
-mypy = "^0.800"
+mypy = "^0.910"
+typed-ast = "1.5.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
