--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Renzo Crisostomo <renzo@crisostomo.me>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+sortedcontainers = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
